fixed some bugs and layout issues

--- a/src/components/layout/Sidebar.css
+++ b/src/components/layout/Sidebar.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  z-index: 1000;
 }
 
 .sidebar-logo {
