--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -13,7 +13,7 @@ body {
 }
 
 .home-main-content {
-  margin-left: 250px;
+  margin-left: 72px; /* collapsed sidebar width */
   display: flex;
   justify-content: center;
   flex: 1;
